# magic_modbus

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTES.md  README.md
.github/workflows/: release.yml
src/: app.rs  app_colors.rs  app_table.rs  enums.rs  logger.rs  macro_parser.rs  main.rs  queue.rs  utils.rs
