[package]
name = "magic_modbus"
version = "0.2.0"
edition = "2024"
authors = ["Isaac Schlaegel"]
description = "A TUI tool written in Rust to make working with Modbus simple and easy"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/doplgamer/magic_modbus"
homepage = "https://github.com/doplgamer/magic_modbus"
keywords = ["cli", "tui", "modbus", "utility"]
categories = ["command-line-utilities"]
rust-version = "1.85.1"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE*"
]

[dependencies]
# CLI
clap = { version = "4.5.41", features = ["derive"] }
inquire = "0.7.5"

# TUI
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.30.0-alpha.5"

# Enum handling
strum = "0.27.2"

# Error handling
color-eyre = "0.6.5"

# Async
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
tokio-modbus = "0.16.1"
futures = "0.3.31"

[[bin]]
name = "magic_modbus"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true